<resources>
    <string name="app_name">UrbanCikarang</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Mention @UrbanCikarang</string>
    <string name="title_section3">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="iklan">Submit Ads</string>
    <string name="partner">Media Partner</string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>
    <string name="aksi">Complete action using</string>
    <string name="isi_iklan">Jenis iklan :\n \nRincian iklan :</string>
    <string name="action_exit">Exit Application?</string>
    <string name="yoik">Yes</string>
    <string name="mbung">No</string>
    <string name="tentang">UrbanCikarang</string>
    <string name="credit">Click icon above to see credit list</string>
    <string name="tutup">Close</string>
    <string name="daftar_credit">UrbanCikarang is a social media that giving uptodate news about Cikarang and surroundings.\n \nThis Application unofficially maded by Dede Ahmad Fawzy aka @FawzyDede\n \nCredits goes to:\n• Vikar Ahmadi aka @VikarELMahdi\n• Febby Arisandy aka @Gentong90</string>
    <string name="jomblo">©2015 Dede Fawzy\nFull Support for UrbanCikarang</string>
    <string name="keep_utd">Keep uptodate &amp; know more about Cikarang</string>
    <string name="changelog">View Changelog</string>
    <string name="share">Share this app</string>
    <string name="tunggu">Please wait until the page loaded</string>
    <string name="putus">No internet connection, Exiting…</string>
    <string name="share_isi">Install @UrbanCikarang Android app for free now! Grab it here http://goo.gl/fSpk5A</string>
</resources>
